--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,4 @@
 <div class="login-container">
-  <img src="logo.png" alt="Logo" class="logo">
   <h2 class="text-center">Login</h2>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="mb-3">
@@ -17,7 +16,7 @@
       <label for="password" class="form-label">Password</label>
       <div class="input-group">
         <input [type]="hidePassword ? 'password' : 'text'" class="form-control" id="password" formControlName="password" required (blur)="validateField('password')">
-        <button type="button" class="btn btn-outline-secondary" (click)="togglePasswordVisibility()">
+        <button type="button" class="btn btn-outline-secondary input-group-text" (click)="togglePasswordVisibility()">
           <i class="bi" [class.bi-eye]="hidePassword" [class.bi-eye-slash]="!hidePassword"></i>
         </button>
       </div>
