--- a/src/app/components/event-detail/event-detail.component.scss
+++ b/src/app/components/event-detail/event-detail.component.scss
@@ -1,29 +1,79 @@
+// Variables
+$primary-color: #d6c17f;
+$primary-color-light: lighten(#d6c17f, 10%);
+$secondary-color: #6c757d;
+$dark-bg-color: #343a40;
+$light-bg-color: #f8f9fa;
+$button-border-radius: 20px;
+$text-light: #ffffff;
+$text-dark: #343a40;
+$danger-color: #dc3545;
+
+body {
+  background-color: $light-bg-color;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 .container {
   margin-top: 20px;
 }
 
 .event-detail-card {
   border: none;
-  background-color: #f8f9fa; // Color de fondo para la tarjeta de detalle del evento
-  height: 100%; // Asegura que la tarjeta ocupe todo el alto de la columna
+  background-color: $light-bg-color;
+  height: 100%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 .event-detail-card .card-body {
-  padding: 15px;
+  padding: 30px;
 }
 
 .event-detail-card .card-title {
   font-weight: bold;
-  color: #343a40;
+  color: $dark-bg-color;
+  font-size: 2em;
 }
 
 .event-detail-card .card-text {
-  color: #6c757d;
+  color: $secondary-color;
+  font-size: 1.1em;
+  margin-bottom: 10px;
+}
+
+.event-details p {
+  margin-bottom: 10px;
 }
 
 .event-photo img {
-  max-height: 100%; // Asegura que la imagen ocupe todo el alto disponible
+  max-height: 100%;
   object-fit: cover;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.btn-primary {
+  background-color: $primary-color;
+  border: none;
+  border-radius: $button-border-radius;
+  padding: 10px 20px;
+  font-size: 1.1em;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: $primary-color-light;
+  }
+}
+
+.btn-close {
+  background-color: none;
+  border: none;
+  border-radius: 50%;
+  padding: 5px;
+  color: $text-light;
+
+  &:hover {
+    background-color: darken($danger-color, 10%);
+  }
 }
