--- a/src/app/components/artists-list/artists-list.component.html
+++ b/src/app/components/artists-list/artists-list.component.html
@@ -1,6 +1,5 @@
-<div class="container mt-5">
+<div class="container-fluid mt-5 pe-5">
   <div class="row">
-    <!-- Barra Lateral de Filtros -->
     <div class="col-md-3 filters-column">
       <div class="card filters-card">
         <div class="card-body">
@@ -41,18 +40,18 @@
       </div>
     </div>
 
-    <!-- Listado de Artistas -->
     <div class="col-md-9">
-      <div class="row">
+      <div class="row artists">
         <ng-container *ngFor="let artist of filteredArtists">
           <div class="col-md-6 mb-4">
             <div class="card artist-card">
               <div class="card-body">
-                <h5 class="card-title">{{ artist.name }}</h5>
+                <div class="d-flex justify-content-between align-items-start">
+                  <h5 class="card-title">{{ artist.name }}</h5>
+                  <a [routerLink]="['/user', artist.id_user]" class="btn btn-primary btn-sm rounded-5">View Profile</a>
+                </div>
                 <p class="card-text">{{ artist.bio }}</p>
                 <p class="card-text"><strong>City:</strong> {{ artist.city }}</p>
-
-                <button class="btn btn-primary" [routerLink]="['/user', artist.id_user]">View Profile</button>
               </div>
               <div *ngIf="artist.photos && artist.photos.length > 0" [id]="'carousel' + artist.id_user" class="carousel slide" data-bs-interval="false">
                 <div class="carousel-inner">
