--- a/src/app/components/create-event/create-event.component.scss
+++ b/src/app/components/create-event/create-event.component.scss
@@ -1,9 +1,18 @@
+// Variables
+$primary-color: #d6c17f;
+$secondary-color: #6c757d;
+$dark-bg-color: #343a40;
+$light-bg-color: #f8f9fa;
+$button-border-radius: 20px;
+$text-light: #ffffff;
+$text-dark: #343a40;
+$danger-color: #dc3545;
+
 .register-container {
-  max-width: 500px;
-  margin: auto;
   padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
+  border: none;
+  border-radius: 10px;
+  background-color: $light-bg-color;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -15,6 +24,7 @@
 
 .form-label {
   font-weight: bold;
+  color: $dark-bg-color;
 }
 
 .text-center {
@@ -24,15 +34,18 @@
 
 .text-danger {
   font-size: 0.875em;
-  color: #dc3545;
+  color: $danger-color;
 }
 
 .btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: $primary-color;
+  border: none;
+  color: $dark-bg-color;
+  font-weight: bold;
+  border-radius: $button-border-radius;
+
   &:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+    background-color: lighten($primary-color, 10%);
   }
 }
 
