--- a/src/app/components/local-list/local-list.component.html
+++ b/src/app/components/local-list/local-list.component.html
@@ -1,7 +1,6 @@
-<div class="container mt-5">
+<div class="container-fluid mt-5 pe-5">
   <div class="row">
-    <!-- Barra Lateral de Filtros -->
-    <div class="col-md-3 filters-column">
+    <div class="col-md-3 filters-column ps-0 ms-0">
       <div class="card filters-card">
         <div class="card-body">
           <h5 class="card-title">Filters</h5>
@@ -31,18 +30,18 @@
       </div>
     </div>
 
-    <!-- Listado de Locales -->
     <div class="col-md-9">
-      <div class="row">
+      <div class="row artists">
         <ng-container *ngFor="let local of filteredLocals">
           <div class="col-md-6 mb-4">
             <div class="card artist-card">
               <div class="card-body">
-                <h5 class="card-title">{{ local.name }}</h5>
+                <div class="d-flex justify-content-between align-items-start">
+                  <h5 class="card-title">{{ local.name }}</h5>
+                  <a [routerLink]="['/user', local.id_user]" class="btn btn-primary btn-sm rounded-5">View Profile</a>
+                </div>
                 <p class="card-text">{{ local.bio }}</p>
                 <p class="card-text"><strong>City:</strong> {{ local.city }}</p>
-
-                <button class="btn btn-primary" [routerLink]="['/user', local.id_user]">View Profile</button>
               </div>
               <div *ngIf="local.photos && local.photos.length > 0" [id]="'carousel' + local.id_user" class="carousel slide" data-bs-interval="false">
                 <div class="carousel-inner">
