--- a/src/app/components/profile/my-events/my-events.component.html
+++ b/src/app/components/profile/my-events/my-events.component.html
@@ -1,11 +1,11 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-12">
-      <h2>My Events</h2>
-      <div *ngIf="myEvents.length === 0" class="alert alert-info">
+      <h2 class="text-center">My Events</h2>
+      <div *ngIf="myEvents.length === 0" class="alert alert-info text-center">
         You have no events.
       </div>
-      <div *ngFor="let event of myEvents; trackBy: trackByEventId" class="card event-card mb-3">
+      <div *ngFor="let event of myEvents; trackBy: trackByEventId" class="card event-card mb-3 shadow-sm">
         <div class="row g-0">
           <div class="col-md-4">
             <img *ngIf="event.profile_photo_url" [src]="event.profile_photo_url" class="img-fluid rounded-start" alt="Event Image">
@@ -26,16 +26,16 @@
               <div *ngIf="event.interestedUsers && event.interestedUsers.length > 0" class="mt-3 interested-users-container">
                 <h6>Interested Users:</h6>
                 <div class="interested-users-wrapper">
-                  <button *ngIf="canScrollLeft(event.id_event)" class="scroll-button left" (click)="scrollLeft(event.id_event)">&lt;</button>
+                  <button class="scroll-button left" (click)="scrollLeft(event.id_event)">&lt;</button>
                   <div class="interested-users" [id]="'interested-users-' + event.id_event">
-                    <a *ngFor="let interest of event.interestedUsers" [routerLink]="['/user', interest.User.id]" class="card interested-user-card">
+                    <a *ngFor="let interest of event.interestedUsers" [routerLink]="['/user', interest.User.id]" class="card interested-user-card shadow-sm">
                       <div class="card-body d-flex align-items-center">
-                        <img [src]="getUserProfilePicture(interest.User)" class="rounded-circle me-2" width="30" height="30" alt="User profile picture">
+                        <img [src]="getUserProfilePicture(interest.User)" class="rounded-circle me-2" width="50" height="50" alt="User profile picture">
                         <h5 class="card-title mb-0">{{ interest.User.name }}</h5>
                       </div>
                     </a>
                   </div>
-                  <button *ngIf="canScrollRight(event.id_event)" class="scroll-button right" (click)="scrollRight(event.id_event)">&gt;</button>
+                  <button class="scroll-button right" (click)="scrollRight(event.id_event)">&gt;</button>
                 </div>
               </div>
               <div *ngIf="event.interestedUsers && event.interestedUsers.length === 0" class="mt-3">
@@ -48,4 +48,3 @@
     </div>
   </div>
 </div>
-
