--- a/src/app/components/profile/my-events/my-events.component.scss
+++ b/src/app/components/profile/my-events/my-events.component.scss
@@ -1,17 +1,41 @@
+$primary-color: #d6c17f;
+$secondary-color: #6c757d;
+$dark-bg-color: #343a40;
+$light-bg-color: #f8f9fa;
+$button-border-radius: 20px;
+$text-light: #ffffff;
+$text-dark: #343a40;
+$danger-color: #af2735;
+
+:root {
+  --primary-color: #{$primary-color};
+  --secondary-color: #{$secondary-color};
+  --dark-bg-color: #{$dark-bg-color};
+  --light-bg-color: #{$light-bg-color};
+  --text-light: #{$text-light};
+  --text-dark: #{$text-dark};
+  --danger-color: #{$danger-color};
+}
+
 .event-card {
-  border: 1px solid #e0e0e0;
+  background-color: $light-bg-color;
   border-radius: 10px;
+  border:none;
   transition: box-shadow 0.3s, transform 0.3s;
-}
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
-.event-card:hover {
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  transform: translateY(-5px);
-}
+  &:hover {
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    transform: translateY(-5px);
+  }
 
-.img-fluid {
-  max-height: 200px;
-  object-fit: cover;
+  .img-fluid {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
 }
 
 .card-body {
@@ -22,38 +46,45 @@
 
 .card-title {
   font-weight: bold;
-  color: #333;
+  color: $dark-bg-color;
 }
 
 .card-text {
-  color: #666;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-a:hover {
-  text-decoration: none;
+  color: $secondary-color;
 }
 
 .btn-primary {
-  background-color: #007bff;
+  background-color: $primary-color;
   border: none;
-  border-radius: 20px;
+  border-radius: $button-border-radius;
+  color: $dark-bg-color;
+  font-weight: bold;
+
+  &:hover {
+    background-color: lighten($primary-color, 10%);
+  }
 }
 
 .btn-secondary {
-  background-color: #6c757d;
+  background-color: $secondary-color;
   border: none;
-  border-radius: 20px;
+  border-radius: $button-border-radius;
+  color: $text-light;
+
+  &:hover {
+    background-color: darken($secondary-color, 10%);
+  }
 }
 
 .btn-danger {
-  background-color: #dc3545;
+  background-color: $danger-color;
   border: none;
-  border-radius: 20px;
+  border-radius: $button-border-radius;
+  color: $text-light;
+
+  &:hover {
+    background-color: darken($danger-color, 10%);
+  }
 }
 
 .interested-users-container {
@@ -69,56 +100,79 @@ a:hover {
 
 .interested-users {
   display: flex;
-  overflow-x: hidden;
+  overflow-x: scroll;
   scroll-behavior: smooth;
   padding: 10px 0;
-  -ms-overflow-style: none;  /* Hide scrollbar in IE and Edge */
-  scrollbar-width: none;  /* Hide scrollbar in Firefox */
-}
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 
-.interested-users::-webkit-scrollbar {
-  display: none;  /* Hide scrollbar in WebKit browsers */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 .interested-user-card {
-  flex: 0 0 150px;
+  flex: 0 0 auto;
+  width: 150px;
   margin-right: 15px;
-  border: 1px solid #ddd;
   border-radius: 10px;
   transition: box-shadow 0.3s;
+  background-color: $light-bg-color;
+
+  &:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+  }
+
+  .card-body {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  }
+
+  .card-title {
+    font-size: 0.875em;
+    color: $dark-bg-color;
+  }
+
+  img {
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+  }
 }
 
-.interested-user-card:hover {
-  box-shadow: 0 0 11px rgba(33,33,33,.2);
-}
+a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.3rem;
 
-.interested-user-card .card-img-top {
-  height: 100px;
-  object-fit: cover;
-  border-bottom: 1px solid #ddd;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  &:hover {
+    text-decoration: none;
+    color: inherit;
+  }
 }
 
 .scroll-button {
   background: none;
   border: none;
-  font-size: 2rem;
+  font-size: 2.5rem;
   cursor: pointer;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-}
+  color: $secondary-color;
+  z-index: 1;
 
-.scroll-button.left {
-  left: -10px;
-}
+  &.left {
+    left: 0;
+  }
 
-.scroll-button.right {
-  right: -10px;
-}
+  &.right {
+    right: 0;
+  }
 
-.scroll-button:disabled {
-  color: #ccc;
-  cursor: not-allowed;
+  &:disabled {
+    color: $secondary-color;
+    cursor: not-allowed;
+  }
 }
