--- a/src/app/components/profile/profile-edit/profile-edit.component.html
+++ b/src/app/components/profile/profile-edit/profile-edit.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
   <div *ngIf="loading" class="text-center">
     Loading...
   </div>
@@ -56,7 +56,9 @@
         <input id="website" formControlName="website" class="form-control" />
       </div>
 
-      <button type="submit" class="btn btn-primary" [disabled]="profileForm.invalid">Save Changes</button>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary" [disabled]="profileForm.invalid">Save Changes</button>
+      </div>
     </form>
   </div>
 </div>
