--- a/src/app/components/profile/profile-view/profile-view.component.html
+++ b/src/app/components/profile/profile-view/profile-view.component.html
@@ -13,7 +13,7 @@
       <p class="profile-role">{{ profile.user_type }}</p>
       <hr class="profile-separator">
 
-      <!-- Galería de fotos del usuario en forma de carrusel -->
+      <!-- User photo gallery in carousel form -->
       <div *ngIf="photoUrls.length > 0" [id]="'carousel' + profile.id_user" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button *ngFor="let photo of photoUrls; let i = index" type="button" [attr.data-bs-target]="'#carousel' + profile.id_user" [attr.data-bs-slide-to]="i" [class.active]="i === 0"></button>
@@ -21,12 +21,12 @@
         <div class="carousel-inner">
           <div *ngFor="let photo of photoUrls; let i = index" class="carousel-item" [ngClass]="{'active': i === 0}">
             <img [src]="'http://localhost:3000' + photo.url" class="d-block w-100" alt="User Photo" (click)="showPhoto(photo)">
-            <!-- Icono de eliminar foto con tooltip -->
+            <!-- Delete photo icon with tooltip -->
             <i class="fas fa-trash-alt delete-photo-icon"
                (click)="confirmDelete(photo.id)"
                data-bs-toggle="tooltip"
                data-bs-placement="top"
-               title="Eliminar"></i>
+               title="Delete"></i>
           </div>
         </div>
         <button class="carousel-control-prev" type="button" [attr.data-bs-target]="'#carousel' + profile.id_user" data-bs-slide="prev">
@@ -39,78 +39,74 @@
         </button>
       </div>
 
-      <div class="user-photos mt-4">
-        <h3>Subir Nuevas Fotos</h3>
-        <input type="file" (change)="onFileSelected($event)" multiple accept="image/*" />
-        <button class="btn btn-primary mt-3" (click)="uploadPhotos()">Subir Fotos</button>
+      <div class="user-photos mt-5 mb-5">
+        <h3>Upload New Photos</h3>
+        <div class="file-input-container">
+          <input type="file" id="file" (change)="onFileSelected($event)" multiple accept="image/*" class="file-input" />
+          <label for="file" class="file-input-label">Choose Files</label>
+        </div>
+        <button class="btn btn-primary mt-3" (click)="uploadPhotos()">Upload Photos</button>
       </div>
     </div>
 
     <div class="col-md-4 text-center profile-section bg-beige">
       <div class="profile-photo-container">
-        @if(!profile.profile_photo_url || profile.profile_photo_url === '/uploads/null'){
-          <img src="/assets/imgs/default-profile-picture.png" class="rounded-circle profile-photo mb-3" alt="Profile Photo">
-        } @else {
-          <img [src]="'http://localhost:3000' + (profile.profile_photo_url || '/uploads/default-profile-picture.jpg')" class="rounded-circle profile-photo mb-3" alt="Profile Photo">
-        }
+        <img *ngIf="!profile.profile_photo_url || profile.profile_photo_url === '/uploads/null'" src="/assets/imgs/default-profile-picture.png" class="rounded-circle profile-photo mb-3" alt="Profile Photo">
+        <img *ngIf="profile.profile_photo_url && profile.profile_photo_url !== '/uploads/null'" [src]="'http://localhost:3000' + profile.profile_photo_url" class="rounded-circle profile-photo mb-3" alt="Profile Photo">
       </div>
       <button class="btn btn-primary mb-4 mt-4" (click)="editProfile()">Edit Profile</button>
       <div class="profile-details">
         <p><strong>Email:</strong> {{ profile.email }}</p>
         <p><strong>City:</strong> {{ profile.city }}</p>
-        <p *ngIf="profile.bio"><strong>Bio:</strong></p>
-        <p *ngIf="profile.bio">{{ profile.bio }}</p>
         <p *ngIf="profile.website"><strong>Website:</strong></p>
         <p *ngIf="profile.website"><a [href]="profile.website" target="_blank">{{ profile.website }}</a></p>
+        <p *ngIf="profile.bio"><strong>Bio:</strong></p>
+        <p *ngIf="profile.bio">{{ profile.bio }}</p>
+
       </div>
     </div>
   </div>
 </div>
 
-<!-- Modal de confirmación -->
+<!-- Delete confirmation modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="deleteModalLabel">Confirmar eliminación</h5>
+        <h5 class="modal-title" id="deleteModalLabel">Confirm Deletion</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        ¿Estás seguro de que deseas eliminar esta foto?
+        Are you sure you want to delete this photo?
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-danger" (click)="deletePhoto()">Eliminar</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" (click)="deletePhoto()">Delete</button>
       </div>
     </div>
   </div>
 </div>
 
+<!-- View photo modal -->
 <div class="modal fade" id="viewPhotoModal" tabindex="-1" aria-labelledby="viewPhotoModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content">
       <div class="modal-header">
-        @if(profile){
-          @if(profile.user_type === 'artist') {
-            <h5 class="modal-title" id="viewPhotoModalLabel">Fotos del Artista: </h5>
-          } @else {
-            <h5 class="modal-title" id="viewPhotoModalLabel">Fotos del Establecimiento: </h5>
-          }
-       }
+        <h5 class="modal-title" id="viewPhotoModalLabel">
+        </h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
         <img [src]="selectedPhotoUrl" class="img-fluid zoomable" alt="Selected Photo">
       </div>
       <div class="modal-footer d-flex justify-content-between">
-        <button type="button" class="btn btn-secondary" (click)="prevPhoto()">
+        <button type="button" class="btn btn-secondary btn-navigation" (click)="prevPhoto()">
           <i class="fas fa-arrow-left"></i>
         </button>
-        <button type="button" class="btn btn-secondary" (click)="nextPhoto()">
+        <button type="button" class="btn btn-secondary btn-navigation" (click)="nextPhoto()">
           <i class="fas fa-arrow-right"></i>
         </button>
       </div>
     </div>
   </div>
 </div>
-
