--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -39,3 +39,17 @@
   </div>
 </nav>
 <router-outlet></router-outlet>
+<footer class="footer bg-dark text-white py-3">
+  <div class="container">
+    <div class="footer-content text-center">
+      <nav class="nav justify-content-center">
+        <a class="nav-link text-white" routerLink="#home">Home</a>
+        <a class="nav-link text-white" routerLink="#artists">Artists</a>
+        <a class="nav-link text-white" routerLink="#locals">Locals</a>
+        <a class="nav-link text-white" routerLink="#events">Events</a>
+        <a class="nav-link text-white" routerLink="#about">About Us</a>
+        <a class="nav-link text-white" routerLink="#contact">Contact</a>
+      </nav>
+    </div>
+  </div>
+</footer>
