--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,14 +3,17 @@
   <div class="container">
     <div class="hero-content">
       <img src="../../../assets/logos/logo_beige.svg" class="logo-moovart">
-      <p>Discover and connect with local artists and events.</p>
+      <p class="text-hero">Discover and connect with local akljñhñlkkjlñrtists and events.</p>
     </div>
   </div>
 </section>
 
 <!-- Featured Artists Section -->
-<section id="artists" class="section py-5">
+<section id="artists" class="section py-5 no-cursor">
   <div class="container">
+    <div class="text-center">
+      <h2 class="text-hero mb-5 mt-2">Discover and connect with local artist and events.</h2>
+    </div>
     <h2 class="text-center mb-4">Featured Artists</h2>
     <div class="row">
       <ng-container *ngFor="let artist of featuredArtists">
@@ -55,4 +58,3 @@
     </div>
   </div>
 </section>
-
