--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,55 +1,59 @@
-<nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark bg-dark mb-0">
-  <a class="navbar-brand logo ml-auto ms-5 mt-2" routerLink="/home">
-    <img src="assets/logos/logo_beige.svg" alt="Logo" class="navbar-logo">
-  </a>
-  <div [ngClass]="{ 'collapse': !opened, 'navbar-collapse': true }" id="navbarNav">
-    <ul class="navbar-nav ms-auto">
-      <li class="nav-item ps-2 pe-2">
-        <a class="nav-link" mat-button routerLink="/home">Home</a>
-      </li>
-      <li class="nav-item ps-2 pe-2">
-        <a class="nav-link" mat-button routerLink="/artists">Artists</a>
-      </li>
-      <li class="nav-item ps-2 pe-2">
-        <a class="nav-link" mat-button routerLink="/locals">Locals</a>
-      </li>
-      <li class="nav-item ps-2 pe-2">
-        <a class="nav-link" mat-button routerLink="/events">Events</a>
-      </li>
-      <li *ngIf="!isLoggedIn" class="nav-item ps-2 pe-2">
-        <a class="nav-link" mat-button routerLink="/login">Log in</a>
-      </li>
-      <li *ngIf="!isLoggedIn" class="nav-item ps-2 pe-2">
-        <a class="nav-link" mat-button routerLink="/register">Register</a>
-      </li>
-      <li *ngIf="isLoggedIn" class="nav-item ps-2 pe-5">
-        <button mat-button [matMenuTriggerFor]="userMenu" class="d-flex align-items-center ps-2 pe-2">
-          <img [src]="userProfilePicture" class="rounded-circle" width="30" height="30" alt="User profile picture">
-          <span class="userName">{{ userName }}</span>
-          <mat-icon class="arrow">arrow_drop_down</mat-icon>
-        </button>
-        <mat-menu #userMenu="matMenu">
-          <button mat-menu-item routerLink="/new-event">New Event</button>
-          <button mat-menu-item routerLink="/my-events">My events</button>
-          <button mat-menu-item (click)="goToProfile()">Profile</button>
-          <button mat-menu-item (click)="logout()">Log out</button>
-        </mat-menu>
-      </li>
-    </ul>
+<body>
+  <div class="wrapper d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-expand-md navbar-dark bg-dark mb-0">
+      <a class="navbar-brand logo ml-auto ms-5 mt-2" routerLink="/home">
+        <img src="assets/logos/logo_beige.svg" alt="Logo" class="navbar-logo">
+      </a>
+      <div [ngClass]="{ 'collapse': !opened, 'navbar-collapse': true }" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item ps-2 pe-2">
+            <a class="nav-link" mat-button routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item ps-2 pe-2">
+            <a class="nav-link" mat-button routerLink="/artists">Artists</a>
+          </li>
+          <li class="nav-item ps-2 pe-2">
+            <a class="nav-link" mat-button routerLink="/locals">Locals</a>
+          </li>
+          <li class="nav-item ps-2 pe-2">
+            <a class="nav-link" mat-button routerLink="/events">Events</a>
+          </li>
+          <li *ngIf="!isLoggedIn" class="nav-item ps-2 pe-2">
+            <a class="nav-link" mat-button routerLink="/login">Log in</a>
+          </li>
+          <li *ngIf="!isLoggedIn" class="nav-item ps-2 pe-2">
+            <a class="nav-link" mat-button routerLink="/register">Register</a>
+          </li>
+          <li *ngIf="isLoggedIn" class="nav-item ps-2 pe-5">
+            <button mat-button [matMenuTriggerFor]="userMenu" class="d-flex align-items-center ps-2 pe-2">
+              <img [src]="userProfilePicture" class="rounded-circle" width="30" height="30" alt="User profile picture">
+              <span class="userName">{{ userName }}</span>
+              <mat-icon class="arrow">arrow_drop_down</mat-icon>
+            </button>
+            <mat-menu #userMenu="matMenu">
+              <button mat-menu-item routerLink="/new-event">New Event</button>
+              <button mat-menu-item routerLink="/my-events">My events</button>
+              <button mat-menu-item (click)="goToProfile()">Profile</button>
+              <button mat-menu-item (click)="logout()">Log out</button>
+            </mat-menu>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <router-outlet class="flex"></router-outlet>
+    <footer class="footer bg-dark text-white py-3 mt-auto">
+      <div class="container">
+        <div class="footer-content text-center">
+          <nav class="nav justify-content-center">
+            <a class="nav-link text-white" routerLink="#home">Home</a>
+            <a class="nav-link text-white" routerLink="#artists">Artists</a>
+            <a class="nav-link text-white" routerLink="#locals">Locals</a>
+            <a class="nav-link text-white" routerLink="#events">Events</a>
+            <a class="nav-link text-white" routerLink="#about">About Us</a>
+            <a class="nav-link text-white" routerLink="#contact">Contact</a>
+          </nav>
+        </div>
+      </div>
+    </footer>
   </div>
-</nav>
-<router-outlet></router-outlet>
-<footer class="footer bg-dark text-white py-3">
-  <div class="container">
-    <div class="footer-content text-center">
-      <nav class="nav justify-content-center">
-        <a class="nav-link text-white" routerLink="#home">Home</a>
-        <a class="nav-link text-white" routerLink="#artists">Artists</a>
-        <a class="nav-link text-white" routerLink="#locals">Locals</a>
-        <a class="nav-link text-white" routerLink="#events">Events</a>
-        <a class="nav-link text-white" routerLink="#about">About Us</a>
-        <a class="nav-link text-white" routerLink="#contact">Contact</a>
-      </nav>
-    </div>
-  </div>
-</footer>
+</body>
